--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -22,7 +22,8 @@ body::-webkit-scrollbar {
 }
 
 .wrapper {
-  max-width: 1504px;
+  // max-width: 1504px;
+  max-width: 1440px;
   padding: 0 32px;
   height: 100vh;
   margin: 0 auto;
@@ -33,8 +34,6 @@ body::-webkit-scrollbar {
 
 .wrapper__inner {
   display: flex;
-  // padding-left: 32px;
-  // padding-right: 22px;
 }
 img{
   width: 100%;
