--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -4,9 +4,9 @@
   }
 }
 @media (max-width: 1374px) {
-  // .content__cards{
-  //   justify-content: start;
-  // }
+  .content__cards{
+    justify-content: start;
+  }
   .content__card{
   max-width: 294px;
   }
