--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body::-webkit-scrollbar {
   width: 0; }
 
 .wrapper {
-  max-width: 1504px;
+  max-width: 1440px;
   padding: 0 32px;
   height: 100vh;
   margin: 0 auto;
@@ -214,7 +214,7 @@ img {
   top: -7px;
   right: -10px;
   background: #FF8484;
-  background-image: url(/img/conteiner-garbage.svg);
+  background-image: url(../../img/conteiner-garbage.svg);
   background-position: center;
   background-repeat: no-repeat;
   -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -248,6 +248,11 @@ img {
   .wrapper {
     padding: 0 12px; } }
 @media (max-width: 1374px) {
+  .content__cards {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start; }
+
   .content__card {
     max-width: 294px; } }
 @media (max-width: 1228px) {
